Fix button overflow across all CSS and configure Babel for older browser support

--- a/mystyle1.css
+++ b/mystyle1.css
@@ -1,9 +1,20 @@
 * body {
-  margin: 0p;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   background: rgb(199, 213, 224);
   font-family: url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,500&display=swap");
+}
+
+button {
+  overflow: visible;
+  word-wrap: break-word;
+  white-space: normal;
+}
+
+button::-moz-focus-inner {
+  border: 0;
+  padding: 0;
 }
 
 .msg.left {
